*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.11 ===
* Windows support changed to experimental.
* Fixed issues reported by the PVS Studio static analyzer.
* Fixed improper band characteristics drawn on Mute for multiband plugins in
  Linear Phase mode.

=== 1.2.10 ===
* Implemented Beat Breather plugin series.
* Added phase switches to Delay Compensator plugin series.
* Implemented Stereo Split mode for stereo version of all dynamic plugins:
  * Compressor and Multiband Compressor;
  * Dynamics Processor and Multiband Dynamics Processor;
  * Expander and Multiband Expander;
  * Gate and Multiband Gate;
  * GOTT Compressor.
* Added Allpass filter to the Filter plugin series.
* Added Bandpass, Ladder-pass and Ladder-rej filters to Parametric Equalizer
  plugin series.
* Introduced Linear Phase mode for the Crossover plugin series.
* Introduced Linear Phase mode for multiband plugin series:
  * GOTT Compressor;
  * Multiband Compressor;
  * Multiband Dynamics Processor;
  * Multiband Expander;
  * Multiband Gate;
  * Multiband Limiter.
* Fixed missing inline display for Phase Detector plugin.
* Fixed invalid input signal level metering for Flanger plugin series.
* Fixed frequency inspection bug for LeftRight and MidSide versions of
  Parametric Equalizer plugin series.
* Fixed improper latency value report by Multiband Limiter plugin series.

=== 1.2.8 ===
* Implemented GOTT (Grand Over-The-Top) Compressor plugin series.
* Implemented Filter plugin series.
* Implemented Flanger plugin series.
* Implemented Multiband Limiter plugin series.
* Implemented high-precision oversampling algorithms for Oscilloscope plugin series.
* Updated default values for file selectors in Impulse Responses and Impulse Reverb
  plugin series.
* Added generation of explicit element definitions for LV2 groups in TTL files as a