@@ -25,4 +25,4 @@ ARTIFACT_TYPE               = plug
 ARTIFACT_DESC               = Linux Studio Plugins
 ARTIFACT_HEADERS            = lsp-plug.in
 ARTIFACT_EXPORT_HEADERS     = 0
-ARTIFACT_VERSION            = 1.2.11-devel
+ARTIFACT_VERSION            = 1.2.11
